# Sivuku

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  Dockerfile  README.md  __init_env.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  tasks.py
agents/: dqn_trader.py  evolution_critic.py
dashboard/: README.md  app.py  gradio_app.py  requirements.txt
envs/openapp_env/assets/: 01-messages.mov  02-editor.mov  03-calendar.mov  04-todo.mov
envs/trading_env/: README.md  client.py  models.py  openenv.yaml  pyproject.toml
envs/trading_env/server/: Dockerfile  app.py  market_sim.py  trading_environment.py
rubrics/: __init__.py  trading_rubric.py
server/: app.py  market_sim.py  requirements.txt  trading_environment.py
src/openenv/core/env_server/: http_server.py  serialization.py
