[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trading-env"
version = "0.1.0"
description = "Self-evolving paper-trading environment for OpenEnv"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.3",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "yfinance>=0.2.40",
    "pandas>=2.0",
    "numpy>=1.24",
    "pydantic>=2.0",
]

[project.scripts]
server = "server.app:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
